# MediaSample

./: .ninja_deps  .ninja_log  CMakeCCompiler.cmake  CMakeCXXCompiler.cmake  CMakeCache.txt  CMakeSystem.cmake  TargetDirectories.txt  android_arch_lifecycle_runtime_1_0_0.xml  android_gradle_build.json  build.ninja  build_android.sh  build_file_checksums.ser  cache.properties  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  com_android_support_animated_vector_drawable_26_1_0.xml  com_android_support_appcompat_v7_26_1_0.xml  com_android_support_constraint_constraint_layout_1_0_2.xml  com_android_support_support_compat_26_1_0.xml  com_android_support_support_core_ui_26_1_0.xml  com_android_support_support_core_utils_26_1_0.xml  com_android_support_support_fragment_26_1_0.xml  com_android_support_support_media_compat_26_1_0.xml  com_android_support_support_v4_26_1_0.xml  com_android_support_support_vector_drawable_26_1_0.xml  com_android_support_test_espresso_espresso_core_3_0_1.xml  com_android_support_test_espresso_espresso_idling_resource_3_0_1.xml  com_android_support_test_rules_1_0_1.xml  com_android_support_test_runner_1_0_1.xml  com_tbruyelle_rxpermissions2_rxpermissions_0_9_5.xml  gradle_models.ser  io_reactivex_rxjava2_rxandroid_2_0_1.xml  modules.xml  rules.ninja  settings.gradle  workspace.xml
app/: CMakeLists.txt  build.gradle
audioPlayer/: CMakeLists.txt  (+1 more)
audioencoder/: CMakeLists.txt  build.gradle
audioencoder/src/androidTest/java/com/yu/audioencoder/: ExampleInstrumentedTest.java
audioencoder/src/main/: AndroidManifest.xml
audioencoder/src/main/cpp/: audio_encoder.cpp  audio_encoder.h  native-invoke.cpp
audioencoder/src/main/java/com/yu/audioencoder/: AudioEncoder.java  MainActivity.java
audioencoder/src/main/res/layout/: activity_main.xml
audioencoder/src/main/res/values/: strings.xml
audioencoder/src/test/java/com/yu/audioencoder/: ExampleUnitTest.java
videoencoder/: CMakeLists.txt  build.gradle
videoencoder/src/main/: AndroidManifest.xml
videoencoder/src/main/cpp/: native-invoke.cpp  video_encoder.cpp  video_encoder.h
(+154 files in other folders)
